--- a/automation/label.yml
+++ b/automation/label.yml
@@ -6,7 +6,7 @@
 # https://github.com/actions/labeler/blob/master/README.md
 
 name: Labeler
-on: [pull_request]
+on: [push]
 
 jobs:
   label:
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/labeler@v2
+    - name: Default action
+      uses: actions/labeler@v2
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
+    - name: Build with Maven
+      run: echo "Hello GitHub Actions!. Pushed event triggered!"
